fix: long description going out of screen

--- a/src/main/webapp/app/product-page/product-page.component.scss
+++ b/src/main/webapp/app/product-page/product-page.component.scss
@@ -1,6 +1,7 @@
 .product-page {
   display: flex;
   justify-content: space-between;
+  overflow-block: scroll;
 }
 
 .product {
@@ -17,6 +18,7 @@
   max-height: 50em;
   overflow: scroll;
   justify-content: space-evenly;
+  word-wrap: break-word;
 }
 
 .product-header {
